CDC-6: Fixed tooltip breaking on firefox and removed unnecessary code

--- a/packages/muze-tooltip/src/styles.scss
+++ b/packages/muze-tooltip/src/styles.scss
@@ -11,15 +11,21 @@
     padding-left: 8px;
     padding-right: 8px;
     padding-top: 4px;
+    display: inline-block;
     // padding-bottom: 4px;
     pointer-events: none;
     z-index: 9999999999;
-    white-space: nowrap;
+    // white-space: nowrap;
+
 }
 .#{$prefix}tooltip-row{
     padding-bottom: 8px;
-    float: none !important;
+    // display: block;
+    // float: none !important;
+    // white-space: pre;
+
 }
+
 .#{$prefix}tooltip-row:last-child{
     padding-bottom: 4px;
 }
