--- a/packages/muze/src/muze.scss
+++ b/packages/muze/src/muze.scss
@@ -148,12 +148,6 @@
     height: inherit;
 }
 
-.#{$prefix}tooltip-box {
-    word-wrap: none;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-}
 
 .#{$prefix}table-header {
     width: inherit;
